--- a/client/package.json
+++ b/client/package.json
@@ -3,17 +3,40 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "next"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "test": "jest",
+    "cy:open": "./node_modules/.bin/cypress run"
   },
   "license": "MIT",
   "dependencies": {
-    "apollo-client": "^2.1.0",
-    "apollo-link-http": "^1.3.0",
-    "graphql": "^0.11.7",
-    "next": "^4.2.0",
-    "next-apollo": "^1.0.4",
-    "react": "^16.2.0",
-    "react-apollo": "^2.0.1",
-    "react-dom": "^16.2.0"
+    "@apollo/client": "^3.5.7",
+    "apollo-link-http": "^1.5.17",
+    "graphql": "^16.2.0",
+    "next": "^12.0.8",
+    "react": "^17.0.2",
+    "react-apollo": "^3.1.5",
+    "react-dom": "^17.0.2",
+    "sass": "^1.49.0"
+  },
+  "devDependencies": {
+    "@apollo/react-testing": "^4.0.0",
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.12",
+    "@types/react": "^17.0.38",
+    "babel-jest": "^27.4.6",
+    "cypress": "^9.3.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.4.7",
+    "scheduler": "^0.20.2",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
   }
 }
