--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,14 @@
     "start": "node server"
   },
   "dependencies": {
+    "apollo-server": "^3.6.2",
     "apollo-server-express": "^1.2.0",
     "body-parser": "^1.18.2",
+    "casual": "^1.6.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "faker": "^4.1.0",
-    "graphql": "^0.11.7"
-  }
+    "graphql": "^16.3.0"
+  },
+  "devDependencies": {}
 }
